# aeson-schema7

./: .gitmodules  LICENSE  README.md  aeson-schema7.cabal  stack.yaml
src/Data/Aeson/Schema/: V7.hs
src/Data/Aeson/Schema/V7/: Parser.hs  Schema.hs  Validate.hs
src/Data/Generics/Traversable/: Generic.hs
test/: Test.hs
test/Data/Aeson/Schema/V7/: TestSuite.hs
