name:                aeson-schema7
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ivanbakel/aeson-schema7#readme
license:             BSD3
license-file:        LICENSE
author:              Isaac van Bakel
maintainer:          ivb@vanbakel.io
copyright:           2019 Isaac van Bakel
category:            data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Aeson.Schema.V7
  other-modules:       Data.Aeson.Schema.V7.Schema
                     , Data.Aeson.Schema.V7.Parser
                     , Data.Aeson.Schema.V7.Validate
                     , Data.Generics.Traversable.Generic
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-better-errors
                     , aeson-qq
                     , range
                     , scientific
                     , text
                     , traverse-with-class
                     , unordered-containers
                     , vector
  ghc-options:         -Wall
  default-language:    Haskell2010
  default-extensions:  LambdaCase
                     , BlockArguments
                     , RecordWildCards
                     , OverloadedStrings
                     , DeriveGeneric
                     , TypeApplications

test-suite aeson-schema7-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       Data.Aeson.Schema.V7.TestSuite
  build-depends:       base
                     , aeson
                     , aeson-schema7
                     , aeson-better-errors
                     , bytestring
                     , directory
                     , tasty
                     , tasty-hunit
                     , text
                     , filemanip
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  LambdaCase
                     , BlockArguments
                     , RecordWildCards
                     , OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/ivanbakel/aeson-schema7
